--- a/WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/WebApp/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -194,9 +194,9 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/charts/chartjs.html">
+                        <a class="nav-link" asp-area="Admin" asp-controller="Users" asp-action="Index">
                             <i class="mdi mdi-chart-pie menu-icon"></i>
-                            <span class="menu-title">Charts</span>
+                            <span class="menu-title">Users</span>
                         </a>
                     </li>
                     <li class="nav-item">
