--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -108,7 +108,7 @@
             <div class="col-lg-6 col-12 ">
                 <div class="info">
                     <h2>
-                        @Model.AboutVideo.Header
+                        @Html.Raw(Model.AboutVideo.Header)
                     </h2>
                     <p>
                         @Model.AboutVideo.Content
